# Chess

./: Cargo.toml  Readme.md
frontend/: index.html  package-lock.json  package.json  style.css  tsconfig.json
frontend/src/: home.ts  index.html  index.ts  style.css
src/: board.rs  game.rs  lib.rs  main.rs  piece.rs  routes.rs  traits.rs
src/chess-pieces/: bishop.rs  bundle.rs  king.rs  knight.rs  pawn.rs  queen.rs  rook.rs  utils.rs
tests/: bishop.rs  king.rs  knight.rs  pawn.rs  queen.rs  rook.rs
websockets/: Cargo.toml
websockets/src/: main.rs  methods.rs  request.rs
