[package]
name = "chess"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.0"
actix-files = "0.6.2"
serde_json = "1.0.93"
serde = "1.0.152"
serde_derive = "1.0.152"
rand = "0.8.5"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

