[package]
name = "websockets"
version = "0.1.0"
edition = "2021"

[dependencies]
chess = { path = "../" }
serde_json = "1.0.93"
serde = "1.0.152"
serde_derive = "1.0.152"

## Websocket handling
tokio-tungstenite = "0.18.0"
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
futures-util = { version = "0.3.25", features = ["sink", "std"] }
futures-channel = "0.3.25"

## For storing games
lazy_static = "1.4.0"
